--- a/Example/ARCoreLocationExample/ARCoreLocationExample/Scenes/List Landmarks/UI Elements/ListLandmarksItem.xib
+++ b/Example/ARCoreLocationExample/ARCoreLocationExample/Scenes/List Landmarks/UI Elements/ListLandmarksItem.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,38 +13,62 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ListLandmarksItem" customModule="ARCoreLocationExample" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="340" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="340" height="100"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="SUr-W7-Yj3">
-                    <rect key="frame" x="0.0" y="8" width="340" height="25"/>
-                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
-                    <color key="textColor" red="0.25490196078431371" green="0.47058823529411764" blue="0.50588235294117645" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Altitude" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="bTr-XA-LAP">
-                    <rect key="frame" x="0.0" y="41" width="340" height="33"/>
-                    <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="24"/>
-                    <color key="textColor" red="0.40392156862745099" green="0.40392156862745099" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r0t-WA-By5">
+                    <rect key="frame" x="0.0" y="0.0" width="340" height="41"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="SUr-W7-Yj3">
+                            <rect key="frame" x="0.0" y="8" width="340" height="25"/>
+                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
+                            <color key="textColor" red="0.25490196078431371" green="0.47058823529411764" blue="0.50588235294117645" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="SUr-W7-Yj3" firstAttribute="width" secondItem="r0t-WA-By5" secondAttribute="width" id="3IY-2Y-TM3"/>
+                        <constraint firstItem="SUr-W7-Yj3" firstAttribute="centerY" secondItem="r0t-WA-By5" secondAttribute="centerY" id="T9p-rn-XiB"/>
+                        <constraint firstItem="SUr-W7-Yj3" firstAttribute="centerX" secondItem="r0t-WA-By5" secondAttribute="centerX" id="kPr-h7-0A6"/>
+                        <constraint firstAttribute="height" constant="41" id="lRr-Uw-ySt"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v5Z-Yt-92u">
+                    <rect key="frame" x="165.5" y="91" width="9" height="9"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="9" id="YpN-MX-WVf"/>
+                        <constraint firstAttribute="width" secondItem="v5Z-Yt-92u" secondAttribute="height" multiplier="1:1" id="eJm-Z4-Xnk"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d8J-f5-teX">
+                    <rect key="frame" x="168" y="41" width="4" height="52"/>
+                    <color key="backgroundColor" white="1" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="4" id="Vi1-Xb-IQM"/>
+                    </constraints>
+                </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="bTr-XA-LAP" secondAttribute="trailing" id="7FS-Ex-B2i"/>
-                <constraint firstItem="SUr-W7-Yj3" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="BYE-7G-zff"/>
-                <constraint firstItem="bTr-XA-LAP" firstAttribute="top" secondItem="SUr-W7-Yj3" secondAttribute="bottom" constant="8" id="NF6-Tb-41p"/>
-                <constraint firstItem="SUr-W7-Yj3" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="PN2-bC-plM"/>
-                <constraint firstItem="bTr-XA-LAP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="jIN-am-5YW"/>
-                <constraint firstItem="SUr-W7-Yj3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="tMz-ts-DgW"/>
+                <constraint firstItem="r0t-WA-By5" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="2rY-Vf-y3n"/>
+                <constraint firstItem="v5Z-Yt-92u" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="8xK-AD-ioN"/>
+                <constraint firstItem="d8J-f5-teX" firstAttribute="top" secondItem="r0t-WA-By5" secondAttribute="bottom" id="LJm-D5-cA7"/>
+                <constraint firstItem="r0t-WA-By5" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Xoc-oL-x7y"/>
+                <constraint firstItem="r0t-WA-By5" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="d3X-CM-O0S"/>
+                <constraint firstItem="v5Z-Yt-92u" firstAttribute="top" secondItem="d8J-f5-teX" secondAttribute="bottom" constant="-2" id="dpy-cf-c9i"/>
+                <constraint firstItem="v5Z-Yt-92u" firstAttribute="top" secondItem="r0t-WA-By5" secondAttribute="bottom" constant="50" id="qlt-QF-jqD"/>
+                <constraint firstItem="d8J-f5-teX" firstAttribute="centerX" secondItem="v5Z-Yt-92u" secondAttribute="centerX" id="rTj-OD-sld"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="altitudeLabel" destination="bTr-XA-LAP" id="uR7-hv-5ty"/>
                 <outlet property="nameLabel" destination="SUr-W7-Yj3" id="vRZ-7h-4bM"/>
+                <outlet property="pinEnd" destination="v5Z-Yt-92u" id="DLa-ii-kfC"/>
+                <outlet property="pinView" destination="r0t-WA-By5" id="LG0-J2-BZW"/>
             </connections>
-            <point key="canvasLocation" x="103.2" y="-102.09895052473765"/>
+            <point key="canvasLocation" x="92.799999999999997" y="-103.44827586206897"/>
         </view>
     </objects>
 </document>
