--- a/Example/ARCoreLocationExample/ARCoreLocationExample/Scenes/List Landmarks/UI Elements/ListLandmarksItem.xib
+++ b/Example/ARCoreLocationExample/ARCoreLocationExample/Scenes/List Landmarks/UI Elements/ListLandmarksItem.xib
@@ -13,29 +13,38 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ListLandmarksItem" customModule="ARCoreLocationExample" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="340" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="340" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r0t-WA-By5">
-                    <rect key="frame" x="0.0" y="0.0" width="340" height="41"/>
+                    <rect key="frame" x="0.0" y="0.0" width="340" height="61"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="SUr-W7-Yj3">
-                            <rect key="frame" x="0.0" y="8" width="340" height="25"/>
+                            <rect key="frame" x="0.0" y="0.0" width="340" height="25"/>
                             <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
                             <color key="textColor" red="0.25490196078431371" green="0.47058823529411764" blue="0.50588235294117645" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="center" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="vII-nn-2wT">
+                            <rect key="frame" x="0.0" y="33" width="340" height="25"/>
+                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
+                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="SUr-W7-Yj3" firstAttribute="width" secondItem="r0t-WA-By5" secondAttribute="width" id="3IY-2Y-TM3"/>
-                        <constraint firstItem="SUr-W7-Yj3" firstAttribute="centerY" secondItem="r0t-WA-By5" secondAttribute="centerY" id="T9p-rn-XiB"/>
+                        <constraint firstItem="SUr-W7-Yj3" firstAttribute="top" secondItem="r0t-WA-By5" secondAttribute="top" id="GRD-71-nVT"/>
+                        <constraint firstItem="vII-nn-2wT" firstAttribute="width" secondItem="r0t-WA-By5" secondAttribute="width" id="ZSq-Fc-M1J"/>
+                        <constraint firstItem="vII-nn-2wT" firstAttribute="top" secondItem="SUr-W7-Yj3" secondAttribute="bottom" constant="8" id="cVa-f7-vWr"/>
                         <constraint firstItem="SUr-W7-Yj3" firstAttribute="centerX" secondItem="r0t-WA-By5" secondAttribute="centerX" id="kPr-h7-0A6"/>
-                        <constraint firstAttribute="height" constant="41" id="lRr-Uw-ySt"/>
+                        <constraint firstAttribute="height" constant="61" id="lRr-Uw-ySt"/>
+                        <constraint firstItem="vII-nn-2wT" firstAttribute="centerX" secondItem="r0t-WA-By5" secondAttribute="centerX" id="nEP-wy-or6"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v5Z-Yt-92u">
-                    <rect key="frame" x="165.5" y="91" width="9" height="9"/>
+                    <rect key="frame" x="165.5" y="111" width="9" height="9"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="9" id="YpN-MX-WVf"/>
@@ -43,7 +52,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d8J-f5-teX">
-                    <rect key="frame" x="168" y="41" width="4" height="52"/>
+                    <rect key="frame" x="168" y="61" width="4" height="52"/>
                     <color key="backgroundColor" white="1" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="4" id="Vi1-Xb-IQM"/>
@@ -64,11 +73,12 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="distanceLabel" destination="vII-nn-2wT" id="8YK-ba-Ia5"/>
                 <outlet property="nameLabel" destination="SUr-W7-Yj3" id="vRZ-7h-4bM"/>
                 <outlet property="pinEnd" destination="v5Z-Yt-92u" id="DLa-ii-kfC"/>
                 <outlet property="pinView" destination="r0t-WA-By5" id="LG0-J2-BZW"/>
             </connections>
-            <point key="canvasLocation" x="92.799999999999997" y="-103.44827586206897"/>
+            <point key="canvasLocation" x="92.799999999999997" y="-94.452773613193415"/>
         </view>
     </objects>
 </document>
